<resources>
    <string name="app_name">MireaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Navigation by:</string>
    <string name="nav_header_subtitle_name">Your name</string>
    <string name="nav_header_subtitle_mail">yoursmail@example.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_home">Home</string>
    <string name="menu_web">Web browser</string>
    <string name="menu_data">Web data</string>
    <string name="menu_worker">Worker</string>
    <string name="menu_brightness">Brightness</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_mic">Mic</string>
    <string name="menu_file">Files</string>
    <string name="menu_weather">Weather</string>
</resources>