<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_profile"
        android:name="ru.mirea.zverevds.mireaproject.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile"
        />

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.zverevds.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_web"
        android:name="ru.mirea.zverevds.mireaproject.ui.webView.WebViewFragment"
        android:label="@string/menu_web"
        tools:layout="@layout/fragment_web_view" />

    <fragment
        android:id="@+id/nav_data"
        android:name="ru.mirea.zverevds.mireaproject.ui.data.DataFragment"
        android:label="@string/menu_data"
        tools:layout="@layout/fragment_data" />

    <fragment
        android:id="@+id/nav_worker"
        android:name="ru.mirea.zverevds.mireaproject.ui.worker.WorkerFragment"
        android:label="@string/menu_worker"
        tools:layout="@layout/fragment_worker"
        />

    <fragment
        android:id="@+id/nav_brightness"
        android:name="ru.mirea.zverevds.mireaproject.ui.brightness.BrightnessFragment"
        android:label="@string/menu_brightness"
        tools:layout="@layout/fragment_brightness" />

    <fragment
        android:id="@+id/nav_camera"
        android:name="ru.mirea.zverevds.mireaproject.ui.camera.CameraFragment"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/nav_mic"
        android:name="ru.mirea.zverevds.mireaproject.ui.mic.MicFragment"
        android:label="@string/menu_mic"
        tools:layout="@layout/fragment_mic" />

    <fragment
        android:id="@+id/nav_file"
        android:name="ru.mirea.zverevds.mireaproject.ui.files.FilesFragment"
        android:label="@string/menu_file"
        tools:layout="@layout/fragment_files" />
</navigation>