<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_web"
            android:icon="@drawable/browser"
            android:title="@string/menu_web" />
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/article"
            android:title="@string/menu_data" />
        <item
            android:id="@+id/nav_worker"
            android:icon="@drawable/worker"
            android:title="@string/menu_worker" />
    </group>
</menu>